<resources>
    <string name="app_name">Barbershop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="query_barbers">query barbers</string>
    <string name="organization_logo">Organization logo</string>
    <string name="welcome_to">Welcome to</string>
    <string name="account_needed_q">Need an account?</string>
    <string name="sign_up">Sign Up.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register barber</string>
    <string name="login">Login</string>
    <string name="barber_name">Huaqing Wang</string>
    <string name="client_name">Client Name</string>
    <string name="appt_start_time">Start Time</string>
    <string name="service">Service</string>
    <string name="service_icon">Service Icon</string>
    <string name="day_report">Day report</string>
    <string name="calendar">Calendar</string>
    <string name="reportScreen">Report</string>

    <string name="report_center">Report Center</string>
    <string name="report_by_month">Report by month:</string>
    <string name="generate_monthly_report">Generate Report</string>
    <string name="month_start">Starting Month</string>
    <string name="month_end">Ending Month</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="btn_continue">Continue</string>
    <string name="step_1">Step 1/2</string>
    <string name="details">Details</string>
    <string name="card_details">Card Details</string>
</resources>
