<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ReportFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TXTV_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/report_center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TXTV_month_sel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/report_by_month"
        app:layout_constraintStart_toStartOf="@+id/TXTV_greeting"
        app:layout_constraintTop_toBottomOf="@+id/TXTV_greeting" />

    <Spinner
        android:id="@+id/spinner_months_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/TXTV_month_start"
        app:layout_constraintTop_toBottomOf="@+id/TXTV_month_sel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BTN_month_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/generate_monthly_report"
        app:layout_constraintStart_toStartOf="@+id/TXTV_month_sel"
        app:layout_constraintTop_toBottomOf="@+id/TXTV_month_sel" />

    <TextView
        android:id="@+id/TXTV_month_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/month_start"
        app:layout_constraintStart_toStartOf="@+id/TXTV_month_sel"
        app:layout_constraintTop_toBottomOf="@+id/TXTV_month_sel" />

    <TextView
        android:id="@+id/TXTV_month_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/month_end"
        app:layout_constraintStart_toStartOf="@+id/TXTV_month_start"
        app:layout_constraintTop_toBottomOf="@+id/TXTV_month_start" />

    <Spinner
        android:id="@+id/spinner_months_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toEndOf="@+id/TXTV_month_end"
        app:layout_constraintTop_toBottomOf="@+id/spinner_months_start" />
</androidx.constraintlayout.widget.ConstraintLayout>